--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.android.support:design:24.2.0'
+    compile 'com.android.support:support-v4:24.2.0'
 
     compile 'com.estimote:sdk:0.11.1@aar'
 
@@ -39,6 +40,9 @@ dependencies {
     compile 'pl.bclogic:pulsator4droid:1.0.3'
 
     compile 'com.estimote:sdk:0.13.0@aar'
+
+
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 
 
     testCompile 'junit:junit:4.12'
